mdapi_output_dir/objects/heroku_logs__c.object
<CustomObject>
    <label>heroku-logs</label>
    <nameField>
        <label>heroku-logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>heroku logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>creationdate__c</fullName>
        <label>creationdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>externalid__c</fullName>
        <externalId>true</externalId>
        <label>externalid</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>method__c</fullName>
        <label>method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shorturl__c</fullName>
        <formula>IF ( (Find(&quot;?&quot;, url__c)-1) &gt; 0, 
    SUBSTITUTE(LEFT( url__c ,Find(&quot;?&quot;, url__c)-1),&quot;http://&quot;, &quot;https://&quot;), 
    SUBSTITUTE(url__c, &quot;http://&quot;, &quot;https://&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>shorturl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>useragent__c</fullName>
        <label>useragent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>userid__c</fullName>
        <label>userid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>method__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>shorturl__c</columns>
        <columns>url__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>